add personal post page

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ myweb/users/__pycache__/forms.cpython-37.pyc
 myweb/users/__pycache__/routes.cpython-37.pyc
 myweb/users/__pycache__/utils.cpython-37.pyc
 __pycache__/run.cpython-37.pyc
+myweb/main/__pycache__/routes.cpython-37.pyc
