change login email to email or name

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@ myweb/main/__pycache__/routes.cpython-37.pyc
 myweb/posts/__pycache__/__init__.cpython-37.pyc
 myweb/posts/__pycache__/forms.cpython-37.pyc
 myweb/posts/__pycache__/routes.cpython-37.pyc
-myweb/users/__pycache__/__init__.cpython-37.pyc
-myweb/users/__pycache__/forms.cpython-37.pyc
-myweb/users/__pycache__/routes.cpython-37.pyc
-myweb/users/__pycache__/utils.cpython-37.pyc
 __pycache__/run.cpython-37.pyc
 myweb/main/__pycache__/routes.cpython-37.pyc
+myweb/users/__pycache__/
