--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ myweb/posts/__pycache__/routes.cpython-37.pyc
 __pycache__/run.cpython-37.pyc
 myweb/main/__pycache__/routes.cpython-37.pyc
 myweb/users/__pycache__/
+myweb/posts/__pycache__/
